--- a/generalListInformationPage.html
+++ b/generalListInformationPage.html
@@ -2,117 +2,148 @@
 <html>
 <head>
 	<title><MM-List-Name></title>
-	<style>
-			body, html{
-			margin:0;
-			padding:0;
-			background: #e0e0e0;
-			font-size: 0.9em;
-		}
-
-		body{
-			font-size: 0.9em;
-			color:#171717;
-		}
-
-		#wrapper{
-			width: auto;
-			max-width: 700px;
-			margin: 1em auto;
-			padding: 1em 3em;
-			border:#d3d3d3 solid 1px;
-			background: white;
-			border-radius: 10px;
-			font-family: "Open Sans",sans-serif;
-		}
-
-		div.submitContainer input {
+<style>
+	body, html{
+	margin:0;
+	padding:0;
+	background: #FFFFFF;
+	font-size: 0.9em;
+	font-family: "Open Sans",sans-serif;
+	}
+	
+	body{
+		color:#0c4587;
+	}
+	
+	#wrapper{
+		width: auto;
+		max-width: 700px;
+		margin: 1em auto;
+		padding: 1em 3em;
+		background: white;
+		border-radius: 10px;
+		font-family: "Open Sans",sans-serif;
+		text-align: center;
+	}
+	
+	div.section {
+		background-color: #f6f6f4;
+		padding: 1em;
+		margin: 2em 0;
+		border-radius: 10px;
+		text-align: center;
+	}
+	
+	div#logo img {
+		max-width: 100px;
+	}
+	
+	div.submitContainer input {
 		font-weight: bold;
 		height: 2.5em;
 		margin: 0.5em 0;
-		}
-
-		p{
-			margin: 0.5em auto;
-			line-height: 150%;
-		}
-
-		input{
-			vertical-align: text-bottom;
-			margin-left:0;
-		}
-
-		input[type="CHECKBOX"]{
-			position: relative;
-			top: 0.12em;
-		}
-
-		input[type="Password"], input[type="TEXT"], input[type="SUBMIT"]{
-			vertical-align:middle;
-			margin-right:0.5em;
-		}
-
-		div.alignInput{
-			display:table;
-		}
-
-		div.alignInput label{
-			display:table-row;
-			text-align:right;
-		}
-
-		p, h1, h2, h3, h4, form {
-			font-weight:normal
-		}
-
-		h1{
-			font-size:2.5em;
-			border-bottom:2px solid lightgray;
-		}
-
-		h2{
-			font-size:1.7em;
-			border-bottom: 1px solid lightgray;
-			margin-top: 2em;
-		}
+	}
+	
+	p{
+		margin: 0.5em auto;
+		line-height: 150%;
+	}
+	
+	a {
+		color:  #0c4587;
+		text-decoration: underline;
+	
+	}
+	
+	label > input[type="TEXT"] {
+		display: block;
+	
+	}
+	
+	input[type="Password"], input[type="TEXT"] {
+		vertical-align:middle;
+		border: none;
+		padding: 1em 0;
+		border: 1px solid  #0c4587;
+		background: #FFFFFF;
+		font-family: "Open Sans",sans-serif;
+		font-size: 1em;
+		width: 100%;
+		margin-bottom: 1em;
 		
-		fieldset p {
-			margin-top: 0.25em;
-		}
+	}
+	
+	input[type="SUBMIT"] {
+		vertical-align:middle;
+		margin-right:0.5em;
+		border: none;
+		padding: 5px 10px;		
+		background: #0c4587;
+		color: #FFFFFF;
+		font-weight: 700;
+		font-size: 1em;
+		padding: 0.5em 1em ;
+		border-radius: 2px;
+		white-space: normal; 
+		word-wrap: break-word;
 		
-		fieldset.fieldsetlight {
-			border:none;
-			border-left: lightgray 1px solid;
-			margin: 1em 0 0 -6px;
-			padding: 0 0 0 5px;
-		}
-		
-		fieldset.fieldsetlight>p {
-			margin-top: 0;
-		}
-		
-		fieldset legend {
-			font-weight: bold;
-		}
-		
-		label {
-			display: block;
-		}
-		
-		center{
-			text-align: left;
-		}
-		
-		.license {
-			color: gray;
-			font-family: "OpenSans",sans-serif;
-			font-size: 0.6em;
-			text-align: center;
-		}
-	</style>
+	}
+	
+	
+	p, h1, h2, h3, h4, form {
+	
+	}
+	
+	h1{
+		font-size:2.5em;
+	}
+	
+	h2{
+		font-size:1.5em;
+		margin: 0 0 1em 0;
+	
+	}
+	
+	fieldset p {
+		margin-top: 0.25em;
+	}
+	
+	fieldset.fieldsetlight {
+		border:none;
+		text-align: center;
+	
+	}
+	
+	fieldset.fieldsetlight>p {
+		margin-top: 0;
+	}
+	
+	fieldset legend {
+		font-weight: bold;
+	}
+	
+	label {
+		display: block;
+		text-align: center;
+		font-weight: 700;
+	}
+	
+	form p {
+		color: #111;
+	}
+	
+	.license {
+		color: gray;
+		text-align: center;
+		margin-bottom: 2em;
+	}
+</style>
 </head>
 <body>
 	<div id="wrapper">
+		<div id="logo">
+			<img src="https://dummyimage.com/200/0c4587/ffffff.png&text=+LOGO+">
+		</div>
 		<h1 id="mainHead"><MM-List-Name></h1>
 		<p><em><MM-List-Description></em></p>
 		<p><MM-List-Info></p>
@@ -166,8 +197,8 @@
 		</div>
 	</div>
 	<div class="license">
-		This template ist licensed as <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons 4.0 BY</a> (by <a href="https://github.com/jdittrich/">jdittrich</a>, <a href="https://github.com/jdittrich/mailmanTemplateCollection/blob/master/generalListInformationPage.html">source</a> )
-		Based on a template by <a href="https://github.com/quimgil">quimgil</a> <a href="https://github.com/quimgil/mailman-templates">original source</a></p>
+		This template ist licensed as <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons 4.0 BY</a> by <a href="https://github.com/flegfleg">Florian Egermann</a>. <br>Based on work by 
+		   <a href="https://github.com/jdittrich/">jdittrich</a> & <a href="https://github.com/quimgil">quimgil</a>.
 	</div>
 </body>
 </html>
