--- a/userSpecificPageOptions.html
+++ b/userSpecificPageOptions.html
@@ -395,7 +395,7 @@ it will not be automatically re-enabled.
 	<MM-Mailman-Footer>
 	</div>
 	<div class="license">
-		This template ist licensed as <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons 4.0 BY</a> by <a href="https://github.com/flegfleg">Florian Egermann</a>. <br>Based on work by 
+		This template ist licensed as <a href="https://www.gnu.org/licenses/gpl-3.0.txt/">GPL 2</a> by <a href="https://github.com/flegfleg">Florian Egermann</a>. <br>Based on work by 
 		   <a href="https://github.com/jdittrich/">jdittrich</a> & <a href="https://github.com/quimgil">quimgil</a>.
 	</div>
 </body>
